--- a/bloody-weather-app/src/index.css
+++ b/bloody-weather-app/src/index.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Shrikhand&display=swap');
 .container {
-  background:whitesmoke;
   max-width:600px;
   margin-top:50px;
   height:600px;
 }
 
+body {
+  background-image:url("img/wave-haikei.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 input#searchEngine {
   background-color:#E9F2F9;
   font-size:15px;
@@ -26,4 +31,50 @@ input#searchButton{
   border:none;
   border-radius:5px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.16), 0 0 0 1px rgba(0,0,0,.08);
+}
+
+.city{
+  font-family: "Shrikhand", serif;
+  font-size:70px;
+  padding-top:30px;
+  position:relative;
+  margin-left:-20px;
+  letter-spacing:1.5px;
+  text-align:left;
+  color:#E9F2F9;
+}
+
+#temperature {
+  font-family: "Fanwood Text", serif;
+  font-size:80px;
+  font-weight:600;
+  color: #CC5500;
+ 
+}
+.description, .date {
+  font-family: "Fanwood Text", serif;
+  font-size:25px;
+  line-height: 35px;
+  color: #CC5500;
+  font-weight: 300;
+  padding:5px;
+}
+.humidity, .windSpeed {
+  font-family: "Fanwood Text", serif;
+  font-size:25px;
+  line-height: 35px;
+  color: #CC5500;
+  font-weight: 300;
+  
+}
+#unit{
+  font-family: "Fanwood Text", serif;
+  font-size:40px;
+  font-weight:300;
+  text-decoration:none;
+  color: #CC5500;
+}
+
+.a{
+  text-decoration :none;
 }
